# feerie

./: .gitignore  CMakeLists.txt  README  clean.sh  feerie.files  feerie.includes  prebuild.sh  rebuild
cmake/: FindPhysX.cmake  utility.cmake
core/: CMakeLists.txt  Doxyfile.in
core/doc/shared/: FeerieFormat.txt
core/src/feerie/: frcore.cpp  frcore.h
core/src/feerie/collection/: frcollection.h
core/src/feerie/factory/: frfactory.h
core/src/feerie/tree/: frleaf.h  frnode.h
core/src/feerie/type/: frtype.h
core/tests/: CMakeLists.txt
core/tests/collection/: frcollection.cpp
core/tests/factory/: frfactory.cpp
core/tests/type/: frtype.cpp
